adding the model and folding the Layout-Layout-Section-Main

--- a/spec/00.md
+++ b/spec/00.md
@@ -9,6 +9,38 @@
 ## Data Shape
 
 ## Layout
+Main [1280x720]
+- Daily increments
+- actionButton
+- clusteredColumnChart 
+- actionButton
+- clusteredColumnChart
+- actionButton
+- pivotTable
+- Pink Map
+- actionButton
+- actionButton
+- shapeMap
+- actionButton
+- Blue Map
+- actionButton
+- actionButton
+- shapeMap
+- actionButton
+- slicer
+- actionButton
+- actionButton
+- Cumulative
+- actionButton
+- clusteredColumnChart
+- actionButton
+- actionButton
+- actionButton
+- Group 1
+- image
+- actionButton
+
+County view
 
 ## Custom Visuals
 * Drilldown choropleth v1.0.2
@@ -17,17 +49,13 @@
 
 ## Resources 
 
-Images
-```
-Frame_2_(4)9974572814303304.png
-Gradation_with_text894674291833967.GIF
-USAFacts_Wordmark_blue8192537517759648.png
-```
-Themes
-```
-CY19SU12.json
-```
-Shapemaps
-```
-usa.states.topo.json
-```
+- Images
+  * Frame_2_(4)9974572814303304.png
+  * Gradation_with_text894674291833967.GIF
+  * USAFacts_Wordmark_blue8192537517759648.png
+
+- Themes
+  * CY19SU12.json
+
+- Shapemaps
+  * usa.states.topo.json
